# homeassistant_cz_energy_spot_prices

./: .gitignore  LICENSE.txt  README.md  eink_chart.py  hacs.json  pyproject.toml  pytest.ini  requirements-test.txt  run-hass.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: hacs.yaml  hassfest.yaml  tests.yaml
custom_components/cz_energy_spot_prices/: __init__.py  binary_sensor.py  cnb_rate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  spot_rate.py  spot_rate_mixin.py  spot_rate_settings.py
custom_components/cz_energy_spot_prices/translations/: cs.json  en.json  sk.json
test_hass/: configuration.yaml
tests/: __init__.py  conftest.py  test_binary_sensors.py  test_find_cheapest_window.py  test_gas_sensors.py  test_init.py  test_sensors.py  test_update_schedule.py
tests/fixtures/: cnb-2022-12-03.xml  cnb-2025-10-22.json  download.py  ote-2022-12-03_CZK.xml  ote-2022-12-03_EUR.xml  ote-electricity-2022-12-03_CZK.xml  ote-electricity-2022-12-03_EUR.xml  ote-electricity-2025-10-22-today.xml  ote-electricity-2025-10-22.xml  ote-gas-2022-12-03_EUR.xml  ote-gas-2025-10-22.xml
