[project]
name = "homeassistant-cz-energy-spot-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant==2025.8.3",
    "pillow==11.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.272",
]

[tool.pyright]
reportUnannotatedClassAttribute = false
reportExplicitAny = false
