[project]
name = "homeassistant-cz-energy-spot-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "habluetooth>=5.6.4",
    "homeassistant>=2025.12.2",
    "pillow>=11.3.0",
    "pytest==9.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-homeassistant-custom-component>=0.13.300",
]

[tool.pyright]
reportUnannotatedClassAttribute = false
reportExplicitAny = false
