[project]
name = "homeassistant-cz-energy-spot-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "habluetooth>=6.1.0",
    "homeassistant>=2026.2.3",
    "pillow>=11.3.0",
    "pytest==9.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-homeassistant-custom-component>=0.13.300",
    # Runtime dependency declared in custom_components/.../manifest.json.
    # Listed here so that the test environment (which does not install manifest
    # ``requirements``) can import the integration.
    "defusedxml>=0.7.1",
]

[tool.pyright]
reportUnannotatedClassAttribute = false
reportExplicitAny = false
